--- a/scripts/configs_scara-emg-30fps-2an-ordered/config_scara-emg-30fps-2an-ordered.yaml
+++ b/scripts/configs_scara-emg-30fps-2an-ordered/config_scara-emg-30fps-2an-ordered.yaml
@@ -8,11 +8,11 @@ data:
     width: 384
     height: 256
   # ABSOLUTE path to data directory
-  data_dir: "/datastores/emg-data-60fps"
+  data_dir: "/datastores/emg-data-30fps-2an-ordered"
   # ABSOLUTE path to unlabeled videos' directory
-  video_dir: "/datastores/emg-data-60fps/videos"
+  video_dir: "/datastores/emg-data-30fps-2an-ordered/videos"
   # location of labels; for example script, this should be relative to `data_dir`
-  csv_file: "single_camera_emg_model_60fps.csv"
+  csv_file: "single_camera_emg_model_30fps-2an.csv"
   # header rows to strip in label csv file
   header_rows: [0, 1, 2]
   # downsample heatmaps - 2 | 3
@@ -106,7 +106,7 @@ model:
   # "mse" | "kl" | "js"
   heatmap_loss_type: "mse"
   # tt expt name
-  model_name: "scara-emg-no-ctx"
+  model_name: "scara-emg-30fps-2an"
   # do context (5 frames)
   do_context: false
 
@@ -195,7 +195,7 @@ eval:
     dataset_to_create: "images"
   # str with an absolute path to a directory containing videos for prediction.
   # (it's not absolute just for the toy example)
-  test_videos_directory: "/datastores/emg-data-60fps/videos"
+  test_videos_directory: "/datastores/emg-data-30fps-2an-ordered/videos"
   # str with an absolute path to directory in which you want to save .csv with predictions
   saved_vid_preds_dir: "/home/jovyan"
   # create labeled video from each video in test_videos_directory
