--- a/scripts/configs_scara-tiffany/config_scara-tiffany.yaml
+++ b/scripts/configs_scara-tiffany/config_scara-tiffany.yaml
@@ -1,18 +1,18 @@
 data:
   # dimensions of training images
   image_orig_dims:
-    width: 800
-    height: 600
+    width: 640
+    height: 512
   # resize dimensions to streamline model creation
   image_resize_dims:
     width: 384
     height: 256
   # ABSOLUTE path to data directory
-  data_dir: "/datastores/emg-data-60fps"
+  data_dir: "/datastores/shaved-data-tiffany"
   # ABSOLUTE path to unlabeled videos' directory
-  video_dir: "/datastores/emg-data-60fps/videos"
+  video_dir: "/datastores/shaved-data-tiffany/videos"
   # location of labels; for example script, this should be relative to `data_dir`
-  csv_file: "single_camera_emg_model_60fps.csv"
+  csv_file: "single_camera_shaved_model_tiffany.csv"
   # header rows to strip in label csv file
   header_rows: [0, 1, 2]
   # downsample heatmaps - 2 | 3
@@ -106,7 +106,7 @@ model:
   # "mse" | "kl" | "js"
   heatmap_loss_type: "mse"
   # tt expt name
-  model_name: "scara-emg-no-ctx"
+  model_name: "scara-emg-30fps-2an"
   # do context (5 frames)
   do_context: false
 
@@ -195,7 +195,7 @@ eval:
     dataset_to_create: "images"
   # str with an absolute path to a directory containing videos for prediction.
   # (it's not absolute just for the toy example)
-  test_videos_directory: "/datastores/emg-data-60fps/videos"
+  test_videos_directory: "/datastores/shaved-data-tiffany/videos"
   # str with an absolute path to directory in which you want to save .csv with predictions
   saved_vid_preds_dir: "/home/jovyan"
   # create labeled video from each video in test_videos_directory
